--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/stack": "^6.3.29",
     "@shopify/restyle": "^2.4.2",
     "expo": "~50.0.14",
@@ -21,6 +22,8 @@
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-localize": "^3.1.0",
+    "react-native-onyx": "^1.0.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.10"
