--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/stack": "^6.3.29",
     "@shopify/restyle": "^2.4.2",
     "expo": "~50.0.14",
+    "expo-application": "~5.8.4",
+    "expo-auth-session": "~5.4.0",
     "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.1",
+    "expo-dev-client": "~3.3.11",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
@@ -26,7 +33,9 @@
     "react-native-onyx": "^1.0.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-native-svg": "14.1.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
