--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "@shopify/restyle": "^2.4.2",
     "expo": "~50.0.14",
     "expo-application": "~5.8.4",
@@ -31,11 +32,13 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-localize": "^3.1.0",
     "react-native-onyx": "^1.0.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "^0.19.10",
     "react-native-svg": "14.1.0",
-    "react-native-reanimated": "~3.6.2"
+    "react-native-web": "^0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
