--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-sqlite": "~13.4.0",
+    "expo-file-system": "~16.0.9",
+    "expo-asset": "~9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
