--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "@shopify/restyle": "^2.4.2",
     "expo": "~50.0.14",
     "expo-application": "~5.8.4",
+    "expo-asset": "~9.0.2",
     "expo-auth-session": "~5.4.0",
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.11",
+    "expo-file-system": "~16.0.9",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
+    "react-native-blurhash": "^2.0.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-localize": "^3.1.0",
     "react-native-onyx": "^1.0.6",
@@ -39,10 +43,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "expo-sqlite": "~13.4.0",
-    "expo-file-system": "~16.0.9",
-    "expo-asset": "~9.0.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
